# TikTok-Clone

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  alembic.ini  config.yaml  default.ini  docker-compose.yml  pre-commit-config.yaml  prometheus.yaml  pyproject.toml  test_db.sqlite
migrations/: env.py
migrations/versions/: 196d45e0dc47_add_users_table.py  51cf2b3fb50a_add_video_table.py  81984fc3996a_make_thumbnail_url_nullable.py  cc28e286e89e_add_hashed_password_column_for_users_.py
src/tik_tok/: main.py
src/tik_tok/api/routes/: users.py  videos.py
src/tik_tok/core/: celery_app.py  config.py  database.py  logging.py  middleware.py  s3_client.py
src/tik_tok/dto/: users.py
src/tik_tok/models/: base.py  users.py  videos.py
src/tik_tok/services/: auth.py
src/tik_tok/tasks/: video_processing.py
tests/unit/: conftest.py  repository.py  test_health.py  test_users.py  test_videos.py
