[tool.poetry]
name = "TikTok-tape"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
python-dotenv = "^0.21.0"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.6.5"
dynaconf = "^3.1.4"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
httpx = "^0.28.1"
pytest = "^6.2.4"
pre-commit = "^4.0.1"
pyjwt = "2.9.0"
passlib = "^1.7.4"
black = "^24.10.0"
aiosqlite = "^0.20.0"
asgi-lifespan = "^2.1.0"
bcrypt = "3.2.0"
celery = {extras = ["rabbitmq"], version = "^5.1.2"}
ffmpeg = "^1.4"
aiofiles = "^24.1.0"
python-multipart = "^0.0.20"
factory-boy = "^3.3.1"
pika = "^1.2.0"
rabbitmq = "^0.2.0"
aioboto3 = "^13.3.0"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.14.0"
httpx = "^0.28.1"
pytest-cov = "^2.12.1"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
